# Theo

./: Makefile.am  README.md  check_condition_number.bash  check_inhomog_bc.bash  condition_number.lay  cube_with_disk.cc  impose_amplitude_runs.bash  new_poisson_sing_face_element.h  poisson_sing_face_element.h  two_d_poisson_with_face_element.cc  unstructured_backward_step_mesh.h  validate_rc.bash
